--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="version_name">1.0</string>
     <string name="title_file">本地视频</string>
     <string name="title_online">在线视频</string>
-    <string name="init_decoders">正在进行第一次解压解码包...</string>
+    <string name="init_decoders">初始化播放器...</string>
     <string name="loadinfo">载入中，请稍后...</string>
     <string name="file_oper">文件操作</string>
     <string name="file_rename">重命名</string>
@@ -14,7 +14,6 @@
     <string name="file_delete">删除</string>
     <string name="file_delete_confirm">确定删除 (%s) ？</string>
     <string name="video_layout_loading">正在缓冲...</string>
-    
     <string name="vitamio_theme_app_name">VPlayer codec</string>
     <string name="VideoView_error_title">Cannot play video</string>
     <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
@@ -22,7 +21,19 @@
     <string name="VideoView_error_text_unknown">对不起,这个视频不能播放。</string>
     <string name="VideoView_error_button">OK</string>
     <string name="mediacontroller_play_pause">Play/Pause</string>
+    <string name="imageview_content_description"></string>
+    <string name="content_desc_lock">锁定</string>
+    <string name="video_original">100%</string>
+    <string name="video_fit_screen">全屏</string>
+    <string name="video_stretch">拉伸</string>
+    <string name="video_crop">裁剪</string>
+    <string name="video_screen_locked">屏幕已锁定</string>
+    <string name="video_screen_unlocked">屏幕锁定已解除</string>
+    <string name="video_layout_buffering_progress">缓冲: %.2f%%</string>
+    <string name="video_cannot_play">对不起,这个视频不能播放。</string>
+    <string name="file_explorer_sdcard_not_available">SD卡无法读取</string>
+    <string name="video_screenshot_save_in">截图存放在 %s.</string>
+    <string name="video_screenshot_failed">截图失败</string>
+    <string name="closing_file">正在退出…</string>
 
-</resources>
-<!-- 
-<string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string> -->
+</resources> <!-- <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string> -->
